[package]
description = "Helpers for application config"
name = "ts-config"
version = "0.2.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
schemars = { version = "1", default-features = false, features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
ts-error = { version = "0.2", path = "../ts-error" }
ts-io = { version = "0.1", path = "../ts-io" }
ts-json = { version = "0.1", path = "../ts-json" }

argh = { version = "0.1", default-features = false, optional = true }
ts-ansi = { version = "0.1", path = "../ts-ansi", optional = true }
ts-path = { version = "0.1", path = "../ts-path", optional = true }

[features]
cli = ["dep:argh", "dep:ts-ansi", "dep:ts-path"]

[lints]
workspace = true
