[package]
name = "ts-error"
version = "0.1.0"

authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
log = { workspace = true }
ts-ansi = { version = "0.1", path = "../ts-ansi" }

[features]
std = []

[lints]
workspace = true
