[package]
description = "Traits for convenient error reporting, and error report/stack creation"
name = "ts-error"
version = "0.3.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
log = { workspace = true, optional = true }
ts-ansi = { version = "0.1", path = "../ts-ansi" }

[features]
log = ["dep:log"]
std = []

[lints]
workspace = true
