[package]
description = "JSON schema validation and reporting"
name = "ts-json"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

jsonschema = { version = "0.30", default-features = false }
ts-ansi = { version = "0.1", path = "../ts-ansi" }
ts-error = { version = "0.1", path = "../ts-error" }

[lints]
workspace = true
