[package]
description = "JSON schema validation and reporting"
name = "ts-json"
version = "0.1.3"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

jsonschema = { version = "0.32", default-features = false }
ts-ansi = { version = "0.1", path = "../ts-ansi" }
ts-error = { version = "0.3", path = "../ts-error" }
unicode-segmentation = { version = "1.10" }

[lints]
workspace = true
